# sailfish-office

./: .gitignore  CMakeLists.txt  Documents.desktop  README.md  config.h.in  dbusadaptor.cpp  dbusadaptor.h  main.cpp  main.qml  org.sailfish.documents.service  org.sailfish.office.service  org.sailfish.office.xml  org.sailfishos.Office.service  org.sailfishos.Office.xml  sailfish-office-openfile.desktop  sailfish-office.desktop  sailfish-office.privileges  sailfishapplication.cpp  sailfishapplication.h
cmake/: BuildSailfishSDK.txt  FindBooster.cmake  FindJollaSignonUiService.cmake  FindPoppler.cmake  FindQtSparql.cmake  FindSilica.cmake  QtTranslationWithID.cmake  sailfish_armv7hl.cmake  sailfish_i486.cmake
components/: DocumentsSharingList.qml  ZoomableThumbnail.qml
cover/: CoverPage.qml
deploy/: deploy-emulator.sh
djvu/: CMakeLists.txt  djvu.cpp  djvu.h  djvuannotation.cpp  djvuannotation.h  djvucanvas.cpp  djvucanvas.h  djvudocument.cpp  djvudocument.h  djvujob.cpp  djvujob.h  djvulinkarea.cpp  djvulinkarea.h  djvurenderthread.cpp  djvurenderthread.h  djvusearchmodel.cpp  djvusearchmodel.h  djvuselection.cpp  djvuselection.h  djvutocmodel.cpp  djvutocmodel.h  qmldir  sailfishofficedjvuplugin.cpp  sailfishofficedjvuplugin.h
dropbox/: CMakeLists.txt  FileNavigator.qml  InfoBanner.qml  LoginPage.qml  SailWebView.qml  SetupPage.qml  controller.cc  controller.h  dropboxplugin.cpp  dropboxplugin.h  qmldir
dropbox/libs/: droprestapi.cc  droprestapi.h  filetransferitem.h  folderitem.cc  folderitem.h  json.cc  listmodel.cc  listmodel.h  networkcontroller.cc  networkcontroller.h  oauth.cc
models/: documentlistmodel.cpp  documentlistmodel.h  documentprovider.cpp  documentprovider.h  documentproviderlistmodel.cpp  documentproviderlistmodel.h  documentproviderplugin.cpp  documentproviderplugin.h  dropboxdocumentprovider.cpp  dropboxdocumentprovider.h  filtermodel.cpp  filtermodel.h  taglistmodel.cpp  taglistmodel.h  tagsthread.cpp  tagsthread.h  trackerdocumentprovider.cpp  trackerdocumentprovider.h  trackertagprovider.cpp  trackertagprovider.h
pages/: DocumentPage.qml  FileListPage.qml  FirstPage.qml  PDFDocumentPage.qml  PDFDocumentToCPage.qml  PresentationPage.qml  PresentationThumbnailPage.qml  SecondPage.qml  SpreadsheetListPage.qml  SpreadsheetPage.qml  StartPage.qml  TextDocumentPage.qml  TextDocumentToCPage.qml
pdf/: CMakeLists.txt  pdfannotation.cpp  pdfannotation.h  pdfcanvas.cpp  pdfcanvas.h  pdfdocument.cpp  pdfdocument.h  pdfjob.cpp  pdfjob.h  pdflinkarea.cpp  pdflinkarea.h  pdfobserver.cpp  pdfobserver.h  pdfpage.cpp  pdfpage.h  pdfpagemodel.cpp  pdfpagemodel.h  pdfrenderthread.cpp  pdfrenderthread.h  pdfsearchmodel.cpp  pdfsearchmodel.h  pdfselection.cpp  pdfselection.h  pdftocmodel.cpp  pdftocmodel.h  qmldir  sailfishofficepdfplugin.cpp  sailfishofficepdfplugin.h
plugin/: CMakeLists.txt  CalligraDocumentPage.qml  ContextMenuHook.qml  ControllerFlickable.qml  DJVUAnnotationEdit.qml  DJVUAnnotationNew.qml  DJVUContextMenuHighlight.qml  DJVUContextMenuLinks.qml  DJVUContextMenuText.qml  DJVUDocumentPage.qml  DJVUDocumentToCPage.qml  DJVUSelectionDrag.qml  DJVUSelectionHandle.qml  DJVUSelectionView.qml  DJVUStorage.js  DJVUView.qml  DeleteButton.qml  DetailsItem.qml  DetailsPage.qml  DocumentFlickable.qml  DocumentHeader.qml  DocumentPage.qml  DocumentPages.qml  DocumentsSharingList.qml  FileInfo.cpp  FileInfo.h  FullscreenError.qml  IndexButton.qml  OverlayToolbar.qml  PDFAnnotationEdit.qml  PDFAnnotationNew.qml  PDFContextMenu.qml  PDFContextMenuHighlight.qml  PDFContextMenuLinks.qml  PDFContextMenuText.qml  PDFDetailsPage.qml  PDFDocumentPage.qml  PDFDocumentToCPage.qml  PDFSelectionDrag.qml  PDFSelectionHandle.qml  (+26 more)
qml/: CoverFileItem.qml  CoverPage.qml  FileListPage.qml  HighlightImage.qml  Main.qml  SearchPageHeader.qml  SortTypeSelectionPage.qml  StartPage.qml  Tag.qml  TagsSelector.qml
qml/translations/: StoreDescription.qml
rpm/: Documents.yaml  sailfish-office.spec
sailfishapplication/: sailfishapplication.cpp  sailfishapplication.pri
settings/: CMakeLists.txt  office.qml  sailfish-office.json
tests/: 00-introduction.txt  00-start-application.txt  01-odf-loading.txt  02-pdf-loading.txt  03-msoffice-loading.txt  04-msooxml-loading.txt  05-contents-listing.txt  tst_PDFDocumentPage.qml
uchardet/usr/lib/: libuchardet.so.0  libuchardet.so.0.0.6
uchardet/usr/lib/pkgconfig/: uchardet.pc
